# local-llm-rag

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  ui.py
api/: Dockerfile  pyproject.toml
api/chroma_langchain_db/: chroma.sqlite3
api/config/: settings.py
api/src/: assistant.py  chain.py  document_processors.py  document_store.py  factories.py  file_handler.py  server.py  vector_store.py
config/: settings.py
src/: chain.py  server.py
ui/: Dockerfile  pyproject.toml  ui.py
