[project]
name = "local-llm-rag-api"
version = "0.1.0"
description = ""
authors = [
    {name = "chelorope",email = "cmarcelorp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "langchain-ollama (>=0.3.2,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "langchain-chroma (>=0.2.3,<0.3.0)",
    "pypdf (>=5.4.0,<6.0.0)",
    "langchain-core (>=0.3.56,<0.4.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "langchain-community (>=0.3.23,<0.4.0)",
    "langchain-mongodb (>=0.6.1,<0.7.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
