[project]
name = "local-llm-rag-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "chelorope",email = "cmarcelorp@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "streamlit-cookies-controller (>=0.0.4,<0.0.5)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false